refactor: Refatora rotas e suas docs  para terem sentido semântico
